hrms_dashboard fix bug text not align

--- a/custom-addons/hrms_dashboard/static/src/css/hrms_dashboard.css
+++ b/custom-addons/hrms_dashboard/static/src/css/hrms_dashboard.css
@@ -486,7 +486,7 @@ h4 .stat-count {
 .start-head {
     text-align: left !important;
     font-size: 15px;
-    margin: 1% 0 1% 3%;
+    margin: 1% 0 1% 1.5%;
     width: 100%;
     color: #6869AC;
     font-weight: bold;
